resolving issues with alignment for sidebar

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -52,3 +52,11 @@ div#mSidebar:hover {
     color: white;
     font-size: 18px;
   }
+
+  .closeBtn:hover {
+    color:#fff;
+  }
+
+  .xBtnClose:hover{
+    fill:#FFF;
+  }
